# Rust-API

./: .env.example  Cargo.toml  README.md  cargo_test.sh
src/: lib.rs  request.rs
src/models/: account_model.rs  apiaccount_model.rs  mod.rs  session_model.rs
src/routes/: user.rs
src/routes/admin/: account.rs
src/routes/api/: mod.rs
src/routes/api/admin/: account.rs
src/routes/api/root/: account.rs
src/routes/root/: account.rs
src/routes/user/: account.rs
